hoping to solve flickering FOREVER

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -1,6 +1,6 @@
 // Code
 #about{
-  min-height: 100%;
+  // min-height: 100%;
   
   .general-wrapper{
     padding:4rem 0rem 17rem 0rem;
